<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ab_prof_clean"
      android:layout_gravity="center"
      android:layout_marginTop="27dp"
      android:textColor="@color/trans_black"
      android:textSize="20sp"
      android:fontFamily="@font/roboto"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="34sp"
      android:textColor="@color/trans_black"
      android:text="@string/ab_cleaner"
      android:layout_gravity="center"
      android:fontFamily="@font/roboto_medium"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_clean_1"
      android:layout_gravity="center"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ab_ads"
      android:textColor="@color/trans_black"
      android:textSize="18sp"
      android:fontFamily="@font/roboto_medium"
      android:layout_gravity="center"
    />

  <TextView
      android:layout_width="281dp"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:fontFamily="@font/roboto"
      android:textColor="@color/trans_black"
      android:text="@string/ab_no_stop"
      android:layout_marginTop="4dp"
      android:gravity="center_horizontal"
      android:layout_gravity="center_horizontal"
    />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_clean_2"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ab_cache"
      android:textColor="@color/trans_black"
      android:textSize="18sp"
      android:fontFamily="@font/roboto_medium"
      android:layout_gravity="center"
      />

  <TextView
      android:layout_width="281dp"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:fontFamily="@font/roboto"
      android:textColor="@color/trans_black"
      android:text="@string/ab_analyze"
      android:layout_marginTop="4dp"
      android:gravity="center_horizontal"
      android:layout_gravity="center_horizontal"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_clean_3"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ab_boost"
      android:textColor="@color/trans_black"
      android:textSize="18sp"
      android:fontFamily="@font/roboto_medium"
      android:layout_gravity="center"
      />

  <TextView
      android:layout_width="281dp"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:fontFamily="@font/roboto"
      android:textColor="@color/trans_black"
      android:text="@string/ab_background"
      android:layout_marginTop="4dp"
      android:gravity="center_horizontal"
      android:layout_gravity="center_horizontal"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_clean_4"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ab_cool_cpu"
      android:textColor="@color/trans_black"
      android:textSize="18sp"
      android:fontFamily="@font/roboto_medium"
      android:layout_gravity="center"
      />

  <TextView
      android:layout_width="281dp"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:fontFamily="@font/roboto"
      android:textColor="@color/trans_black"
      android:text="@string/ab_cool_cpu_text"
      android:layout_marginTop="4dp"
      android:gravity="center_horizontal"
      android:layout_gravity="center_horizontal"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_clean_5"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ab_battery"
      android:textColor="@color/trans_black"
      android:textSize="18sp"
      android:fontFamily="@font/roboto_medium"
      android:layout_gravity="center"
      />

  <TextView
      android:layout_width="281dp"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:fontFamily="@font/roboto"
      android:textColor="@color/trans_black"
      android:text="@string/ab_battery_text"
      android:layout_marginTop="4dp"
      android:gravity="center_horizontal"
      android:layout_gravity="center_horizontal"
      />

  <Button
      android:id="@+id/btnPay"
      android:layout_width="134dp"
      android:layout_height="wrap_content"
      android:background="@drawable/btn_optimize"
      android:text="@string/ab_next"
      android:textAllCaps="true"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="56dp"
      android:textColor="@color/btn_white"
      android:textSize="15sp"
      android:fontFamily="@font/roboto_bold"
      android:paddingStart="25dp"
      android:paddingEnd="25dp"
      android:paddingBottom="15dp"
      android:paddingTop="15dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:layout_gravity="center_horizontal"
      android:textColor="@color/trans_black"
      android:text="@string/ab_free_with_ads"
      android:fontFamily="@font/roboto_medium"
      android:layout_marginTop="16dp"
      android:layout_weight="28"
      android:id="@+id/tvNext"
      android:layout_marginBottom="56dp"/>

</LinearLayout>
</ScrollView>