<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99FFFFFF"
    android:weightSum="10"
    android:paddingTop="@dimen/_80sdp"
    android:paddingBottom="@dimen/_80sdp"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp">

   <LinearLayout
       android:background="#000000"
       android:layout_weight="1.7"
       android:layout_width="match_parent"
       android:layout_height="0dp">

       <TextView
           android:gravity="center"
           android:textColor="#FFFFFF"
           android:text="@string/add_applications"
           android:textStyle="bold"
           android:textAppearance="?android:textAppearanceLarge"
           android:layout_width="match_parent"
           android:layout_height="match_parent" />

   </LinearLayout>
    <LinearLayout
        android:background="#000000"
        android:layout_weight="2.3"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:paddingLeft="@dimen/_4sdp"
            android:paddingRight="@dimen/_4sdp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/limited_apps_are_avalible_and_some_apps_and_features_may_not_work_when_ultra_power_saving_mode_is_enabled"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="#000000"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="3"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_2sdp">

            <LinearLayout
                android:padding="@dimen/_7sdp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:id="@+id/addcontacts"
                    android:src="@drawable/contacts"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:gravity="center"
                    android:text="Contacts"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

            </LinearLayout>


            <LinearLayout
                android:padding="@dimen/_7sdp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/addcamera"
                    android:src="@drawable/camera"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="@string/camera"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

            </LinearLayout>


            <LinearLayout
                android:padding="@dimen/_7sdp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/addcalculator"
                    android:src="@drawable/calc"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="@string/calculator"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="3"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_6sdp">

            <LinearLayout
                android:padding="@dimen/_7sdp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/addclock"
                    android:src="@drawable/clock"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:gravity="center"
                    android:text="@string/alaram"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

            </LinearLayout>


            <LinearLayout
                android:padding="@dimen/_7sdp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/addmap"
                    android:src="@drawable/map"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="@string/map"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

            </LinearLayout>


            <LinearLayout
                android:padding="@dimen/_7sdp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/addplaystore"
                    android:src="@drawable/gp"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="@string/play_store"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>