<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/banner_layout"
        android:id="@+id/include2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/ultra_power_saving_mode"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        />
    <TextView
        android:id="@+id/addedtimedetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/extended_battery_up_to_10h_30m"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:translationY="-180dp"
        app:layout_constraintTop_toBottomOf="@+id/abnb_normal_charge"
        tools:layout_editor_absoluteX="0dp"
        />
    <Button
        android:id="@+id/applied"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1.5"
        android:background="@drawable/btn_ultra_mode"
        android:padding="@dimen/_8sdp"
        android:paddingBottom="15dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:paddingTop="15dp"
        android:textSize="18sp"
        android:text="@string/apply"
        android:translationY="-180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedtimedetail"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/abnb_normal_charge"
        android:layout_width="wrap_content"
        android:translationY="-180dp"
        android:layout_height="550dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        />


</androidx.constraintlayout.widget.ConstraintLayout>